# SentinalRAG

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  AUDIT_REPORT.md  CONTRIBUTING.md  DEMO.md  DEMO_SCRIPT.md  DEPLOYMENT.md  EVALUATION.md  HACKATHON_REPORT.md  JUDGE_Q&A.md  LICENSE  Makefile  PERFORMANCE.md  PRESENTATION.md  README.md  RESUME.md  SECURITY.md  SUBMISSION_CHECKLIST.md  docker-compose.yml  railway.json  start-tunnel.cmd
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  cors.py  database.py  exceptions.py  logging.py  metrics.py  middleware.py  qdrant.py  resource_tracker.py
backend/app/graph/: graph_builder.py  state.py
backend/app/models/: __init__.py  chat_session.py  chunk.py  document.py  trace.py
backend/app/schemas/: chat.py  chunk.py  document.py  health.py  metrics.py  search.py  trace.py
backend/app/services/: answer_generator.py  bm25_service.py  chat_history_service.py  chunking_service.py  clarification_service.py  confidence_service.py  contradiction_service.py  document_service.py  file_service.py  (+17 more)
backend/evaluation/: dataset.py
backend/load_tests/: locustfile.py  run_load_test.ps1  run_load_test.sh
backend/migrations/: env.py
backend/observability/: report_generator.py  visualizer.py
backend/performance/: benchmark_runner.py  failure_test_results.json  load_test_results.json  performance_report.md  system_metrics.csv
backend/tests/: conftest.py  test_chunking.py  test_confidence_breakdown.py  test_embedding.py  test_evaluation.py  test_file_utils.py  test_graph.py  test_graph_trace.py  test_health.py  test_indexing.py  test_ingest.py  test_search.py  test_text_cleaning.py  test_trace_api.py  test_trace_service.py
(+119 files in other folders)
