[project]
name = "sentinelrag-backend"
version = "1.0.0"
description = "Self-Correcting RAG Platform — Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "PyMuPDF>=1.25.0",
    "Pillow>=11.0.0",
    "pytesseract>=0.3.0",
    "sentence-transformers>=3.4.0",
    "qdrant-client>=1.13.0",
    "numpy>=2.2.0",
    "torch>=2.5.0",
    "langgraph>=0.4.0",
    "langchain-openai>=0.3.0",
    "psutil>=7.0.0",
    "tiktoken>=0.9.0",
    "alembic>=1.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
